--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "react-scripts test -u --coverage --watchAll",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
@@ -32,6 +32,7 @@
 		]
 	},
 	"devDependencies": {
+		"codecov": "^3.7.0",
 		"husky": "^4.2.5",
 		"prettier": "^2.0.5",
 		"pretty-quick": "^2.0.1"
