fix travis build issue relates #3
Co-authored-by: itsina96 <itsina96@gmail.com>

Co-authored-by: jackherizsmith <jackherizsmith@gmail.com>

Co-authored-by: CampbellDocherty <campbellsofitsidocherty@gmail.com>

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test -u --coverage --watchAll",
+		"test": "react-scripts test -u --coverage --watchAll=false",
+		"test-watch": "react-scripts test -u --coverage --watchAll",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
