--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
+		"airtable": "^0.8.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"build": "react-scripts build && run-p build:**",
 		"test": "react-scripts test -u --coverage --watchAll=false",
 		"test-watch": "react-scripts test -u --coverage --watchAll",
-		"eject": "react-scripts eject"
+		"serve": "react-cli-service serve",
+		"serve:lambda": "netlify-lambda serve lambda",
+		"build:app": "react-cli-service build",
+		"build:lambda": "netlify-lambda build lambda"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
