--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"airtable": "^0.8.1",
+		"netlify-lambda": "^1.6.3",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.1"
