--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"airtable": "^0.8.1",
+		"axios": "^0.19.2",
 		"netlify-lambda": "^1.6.3",
 		"react": "^16.13.1",
+		"react-cli-service": "^1.9.13",
 		"react-dom": "^16.13.1",
-		"react-scripts": "3.4.1"
+		"react-scripts": "3.4.1",
+		"serve": "^11.3.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
