Alter toml file again
Co-authored-by: itsina96 <itsina96@gmail.com>
Co-authored-by: lizzy-j <lizzyhj@hotmail.com>
Co-authored-by: jackherizsmith <jackherizsmith@gmail.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  functions = "build-lambda"
-  publish = "dist/"
+  functions = "lambda-functions"
+  publish = "build-lambda/"
   command = "npm run build:lambda"
