--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  functions = "lambda-functions/"
-  command = "npm run build:lambda"
-  publish = "build-lambda/"
+  functions = "build-lambda/"
+  command = "npm run build"
+  publish = "build/"
