--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
 		"airtable": "^0.8.1",
 		"axios": "^0.19.2",
 		"netlify-lambda": "^1.6.3",
+		"npm-run-all": "^4.1.5",
 		"react": "^16.13.1",
-		"react-cli-service": "^1.9.13",
 		"react-dom": "^16.13.1",
-		"react-scripts": "3.4.1",
-		"serve": "^11.3.2",
 		"react-router-dom": "^5.2.0",
+		"react-scripts": "^3.4.1",
+		"serve": "^11.3.2",
 		"styled-components": "^5.1.1"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build && run-p build:**",
 		"test": "react-scripts test -u --coverage --watchAll=false",
 		"test-watch": "react-scripts test -u --coverage --watchAll",
-		"serve": "react-cli-service serve",
-		"serve:lambda": "netlify-lambda serve lambda",
-		"build:app": "react-cli-service build",
-		"build:lambda": "netlify-lambda build lambda"
+		"start": "run-p start:**",
+		"start:app": "react-scripts start",
+		"start:lambda": "netlify-lambda serve lambda-functions",
+		"build": "run-p build:**",
+		"build:app": "react-scripts build",
+		"build:lambda": "netlify-lambda build lambda-functions"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -55,5 +55,6 @@
 		"hooks": {
 			"pre-commit": "pretty-quick --staged"
 		}
-	}
+	},
+	"proxy": "http://localhost:9000"
 }
