--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"airtable": "^0.8.1",
-		"axios": "^0.19.2",
+		"netlify-cli": "^2.53.0",
 		"netlify-lambda": "^1.6.3",
 		"npm-run-all": "^4.1.5",
 		"react": "^16.13.1",
