--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"airtable": "^0.8.1",
 		"axios": "^0.19.2",
+		"gotrue-js": "^0.9.25",
 		"netlify-lambda": "^1.6.3",
 		"npm-run-all": "^4.1.5",
 		"react": "^16.13.1",
