--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"airtable": "^0.8.1",
+		"cloudinary-react": "^1.5.0",
 		"gotrue-js": "^0.9.25",
 		"netlify-lambda": "^1.6.3",
 		"npm-run-all": "^4.1.5",
