--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"airtable": "^0.8.1",
 		"bcryptjs": "^2.4.3",
 		"cloudinary-react": "^1.5.0",
-		"netlify-lambda": "^1.6.3",
 		"npm-run-all": "^4.1.5",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
@@ -24,12 +23,8 @@
 	"scripts": {
 		"test": "react-scripts test -u --coverage --watchAll=false",
 		"test-watch": "react-scripts test -u --coverage --watchAll",
-		"start": "run-p start:**",
-		"start:app": "react-scripts start",
-		"start:lambda": "netlify-lambda serve lambda-functions",
-		"build": "run-p build:**",
-		"build:app": "react-scripts build",
-		"build:lambda": "netlify-lambda build lambda-functions"
+		"start": "react-scripts start",
+		"build": "react-scripts build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -58,6 +53,5 @@
 		"hooks": {
 			"pre-commit": "pretty-quick --staged"
 		}
-	},
-	"proxy": "http://localhost:9000"
+	}
 }
