--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"test": "react-scripts test -u --coverage --watchAll=false",
 		"test-watch": "react-scripts test -u --coverage --watchAll",
 		"start": "react-scripts start",
-		"build": "react-scripts build"
+		"build": "CI=false react-scripts build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
