--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"airtable": "^0.8.1",
 		"bcryptjs": "^2.4.3",
 		"cloudinary-react": "^1.5.0",
+		"jsonwebtoken": "^8.5.1",
 		"npm-run-all": "^4.1.5",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
