--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"airtable": "^0.8.1",
 		"bcryptjs": "^2.4.3",
 		"cloudinary-react": "^1.5.0",
+		"cypress": "^4.8.0",
 		"jsonwebtoken": "^8.5.1",
 		"npm-run-all": "^4.1.5",
 		"react": "^16.13.1",
@@ -25,7 +26,8 @@
 		"test": "react-scripts test -u --coverage --watchAll=false",
 		"test-watch": "react-scripts test -u --coverage --watchAll",
 		"start": "react-scripts start",
-		"build": "CI=false react-scripts build"
+		"build": "CI=false react-scripts build",
+		"cypress:open": "cypress open"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
