--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"airtable": "^0.8.1",
 		"bcryptjs": "^2.4.3",
 		"cloudinary-react": "^1.5.0",
-		"cypress": "^4.8.0",
 		"jsonwebtoken": "^8.5.1",
 		"npm-run-all": "^4.1.5",
 		"react": "^16.13.1",
@@ -27,7 +26,8 @@
 		"test-watch": "react-scripts test -u --coverage --watchAll",
 		"start": "react-scripts start",
 		"build": "CI=false react-scripts build",
-		"cypress:open": "cypress open"
+		"cypress:open": "cypress open",
+		"cypress:run": "cypress run --spec 'cypress/integration/*.spec.js'"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -46,7 +46,9 @@
 	},
 	"devDependencies": {
 		"codecov": "^3.7.0",
+		"cypress": "^4.8.0",
 		"husky": "^4.2.5",
+		"jest-fetch-mock": "^3.0.3",
 		"netlify-cli": "^2.54.0",
 		"prettier": "^2.0.5",
 		"pretty-quick": "^2.0.1",
