--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
 		"test-watch": "react-scripts test -u --coverage --watchAll",
 		"start": "react-scripts start",
 		"build": "CI=false react-scripts build",
-		"cypress:open": "cypress open",
-		"cypress:run": "cypress run --spec 'cypress/integration/*.spec.js'"
+		"cypress:open": "cypress open"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -45,6 +44,7 @@
 		]
 	},
 	"devDependencies": {
+		"@cypress/code-coverage": "^3.8.1",
 		"codecov": "^3.7.0",
 		"cypress": "^4.8.0",
 		"husky": "^4.2.5",
