--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
 script:
   - npm run test
 after-script:
-  - bash <(curl -s https://codecov.io/bash) -t token -f coverage/coverage-final.json
-  - bash <(curl -s https://codecov.io/bash) -t token -f .nyc_output/out.json
+  - bash <(curl -s https://codecov.io/bash) -t CODECOV_TOKEN -f coverage/coverage-final.json
+  - bash <(curl -s https://codecov.io/bash) -t CODECOV_TOKEN -f .nyc_output/out.json
